# pbl-agent

./: .env  .env.example  .gitignore  AI_Agent_PBL_实施计划.md  AI_Agent_技术实现方案.md  CLAUDE.md  README.md
backend/: .env.example  .flake8  README.md  main.py  pyproject.toml  requirements.txt  start.py
backend/api/: __init__.py  dependencies.py
backend/api/routes/: __init__.py  auth.py  cards.py  interactions.py  projects.py
backend/config/: __init__.py  settings.py
backend/middleware/: __init__.py  error_handling.py  logging.py
backend/models/: __init__.py  schemas.py
backend/services/: __init__.py  database.py  gemini_client.py
config/: docker-compose.yml  redis.conf
docs/design/: AI_Agent_PBL_实施计划.md  AI_Agent_技术实现方案.md  PRD.md
docs/openrouter/: openrouter_gemini_guide.md
extracted_texts/: PBL教学合作卡.json  PBL教学工具卡.json  PBL教学活动卡.json  PBL教学活动卡.txt  《长安的荔枝》3-4年级.txt  亿小步课题开发方法论（1-3模块）.txt
frontend/: .eslintrc.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/analytics/: page.tsx
frontend/app/cases/: page.tsx
frontend/app/design/[id]/: page.tsx
frontend/app/design/new/: page.tsx
frontend/app/help/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/project/[id]/preview/: page.tsx
frontend/app/projects/: page.tsx
frontend/app/resources/: page.tsx
logs/: .51c5fb17915e94f8b9470465ff373fecbc5b5124-audit.json
resources/extracted_texts/: PBL教学合作卡.txt  PBL教学工具卡.txt  《长安的荔枝》3-4年级.json  亿小步课题开发方法论（1-3模块）.json
scripts/: test_redis.sh
tests/openrouter/: test_openrouter_gemini.py
